first page done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <nav>
             <ul>
               <li>Home</li>
-              <li>Categories</li>
+              <li><a style="color: white" href="#categories">Categories</a></li>
               <li>Valentine</li>
               <li>Birthday</li>
               <li>Recipient</li>
@@ -48,19 +48,119 @@
           </div>
           <div class="image"></div>
           <div class="social">
-            <divc class="social-links">
+            <div class="social-links">
               <i class="fa fa-facebook" aria-hidden="true"></i>
               <i class="fa fa-instagram" aria-hidden="true"></i>
               <i class="fa fa-youtube" aria-hidden="true"></i>
-            </divc>
+            </div>
           </div>
         </section>
       </section>
-      <section class="categories scroll">
-        <div class="heading">Categories</div>
-        <div class="categories-cards">
-          
+      <section id="categories" class="categories scroll">
+        <div class="heading"><span> Categories</span></div>
+        <div class="categories-cards"></div>
+      </section>
+      <section class="last scroll">
+        <div class="last-heading"><h1>Latest Products</h1></div>
+        <div class="latest-cards">
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
+          <div class="card-corusel">
+            <img
+              src="https://cdn.pixabay.com/photo/2021/01/17/07/35/dog-5924174_960_720.jpg"
+              alt=""
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2020/12/03/12/35/giraffe-5800387_960_720.jpg"
+              alt=""
+            />
+          </div>
         </div>
+      </section>
+      <section class="description-footer scroll">
+        <div class="description">
+          <h1>C&K</h1>
+          <p>Best Cakes and Flowers services online</p>
+          <div class="dis">
+            <p>
+              Buy gifts online from a gift shop in India At C&K.com, we
+              understand what gifting entails, and how through the things you
+              gift others, you are also taking a step towards strengthening your
+              bond – of love, and trust - with them. Therefore, our endeavor is
+              to make your experience at our online gift shop unique for you –
+              our esteemed customers. Our online gift is an exclusive gift
+              website in India that responds to all your gift-related anxieties
+              with an extensive collection of both traditional and ethnic, and
+              modern and contemporary, gift items for any occasion you can think
+              of. We have made the process of gifting easy with the online
+              selection and timely delivery anywhere in India, easy payment
+              facilities including an option to pay cash upon delivery, delivery
+              alternatives like gift-arrivals on the same day, next day and even
+              at midnight (for some items), smooth return and replacement
+              policies alongside free shipping on most gift items, online gift
+              shopping becomes delightful and stress-free for all online
+              shoppers at C&K.
+            </p>
+          </div>
+        </div>
+
+        <footer>
+          <h1>
+            <i class="fa fa-instagram" aria-hidden="true"></i
+            ><i class="fa fa-facebook" aria-hidden="true"></i
+            ><i class="fa fa-twitter" aria-hidden="true"></i>
+          </h1>
+          <h1>&copy;2021 All Rights Reserved</h1>
+          <h1>Privacy Policy</h1>
+        </footer>
       </section>
     </main>
     <script src="./main.js"></script>
