all 3 pages done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             <ul>
               <li>Home</li>
               <li><a style="color: white" href="#categories">Categories</a></li>
-              <li>Valentine</li>
+              <li>
+                <a id="valentine" style="color: white" href="../Valentine/index.html"
+                  >Valentine</a
+                >
+              </li>
               <li>Birthday</li>
               <li>Recipient</li>
               <li>Occassions</li>
