--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
               <li>Home</li>
               <li><a style="color: white" href="#categories">Categories</a></li>
               <li>
-                <a id="valentine" style="color: white" href="../Valentine/index.html"
+                <a
+                  id="valentine"
+                  style="color: white"
+                  href="./Valentine/index.html"
                   >Valentine</a
                 >
               </li>
