--- a/Valentine/index.html
+++ b/Valentine/index.html
@@ -26,9 +26,20 @@
             </ul>
           </nav>
           <div class="burger">
-            <div></div>
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
         </header>
+        <div class="burger-items">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li>Valentine</li>
+            <li>Birthday</li>
+            <li>Recipient</li>
+            <li>Occassions</li>
+          </ul>
+        </div>
         <section class="content">
           <div class="content-heading"></div>
           <div class="content-subheading"></div>
