--- a/index.html
+++ b/index.html
@@ -35,9 +35,28 @@
             </ul>
           </nav>
           <div class="burger">
-            <div></div>
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
         </header>
+        <div class="burger-items">
+          <ul>
+            <li>Home</li>
+            <li><a style="color: white" href="#categories">Categories</a></li>
+            <li>
+              <a
+                id="valentine"
+                style="color: white"
+                href="./Valentine/index.html"
+                >Valentine</a
+              >
+            </li>
+            <li>Birthday</li>
+            <li>Recipient</li>
+            <li>Occassions</li>
+          </ul>
+        </div>
         <section class="hero-content">
           <div class="content">
             <h2>
